-- fixing layout bug in entries list (perhaps due to a new glyph icon for ordering tables)

--- a/public/templ/sass/landing.sass
+++ b/public/templ/sass/landing.sass
@@ -116,6 +116,8 @@ $grid-gutter-width: 1px
         float: left
         width: 800px
 
+table#entries-table > tbody > tr > td.sorting_1
+  width: 50px
 
 #logout-button.btn.btn-inverse
   position: relative
